<resources>
    <string name="app_name">NMedia</string>
    <string name="str_hello">NMedia</string>
    <string name="remove_post">Remove</string>
    <string name="blank_content_error">Content is blank</string>
    <string name="edit_post">Edit</string>
    <string name="edit_info">Editing</string>
    <string name="chooser_share_post">Share</string>
    <string name="error_empty_content">No message specified</string>
    <string name="description_post_save">Save</string>
    <string name="add_post">Add post</string>
    <string name="description_post_close_edit">Close edit</string>
    <string name="google_play_unavailable">Google Api Unavailable</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="notification_user_post">%1$s published a new post:</string>
    <string name="notification_fail">Error receiving data</string>
    <string name="notification_content_post">%1$s</string>
    <string name="error_loading">Something went wrong. Try again later</string>
    <string name="retry_loading">Retry</string>
    <string name="empty_posts">There are no posts.\nIf you create a new post, it will appear here</string>
    <string name="error_network">Error network</string>
    <string name="error_unknown">Error unknown</string>
    <string name="db_error">Error Data base</string>
    <string name="fresh_posts">fresh posts</string>
    <string name="menu_save">Save</string>
    <string name="description_select_photo">Select photo</string>
    <string name="description_take_photo">Take photo</string>
    <string name="description_photo">Photo</string>
    <string name="remove">Remove</string>
    <string name="show_post">Post</string>
    <string name="new_or_edit_post">New or edit post</string>
    <string name="show_image">Image</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="authentication">Authentication</string>
    <string name="error_login">Enter login</string>
    <string name="error_password">Enter password</string>
    <string name="refine_signout">Do you want to sign out?</string>
    <string name="cancel">Cancel</string>
    <string name="name">User name</string>
    <string name="password_conf">Password confirmation</string>
    <string name="error_name">Enter user name</string>
    <string name="error_conf_password">The entered passwords do not match</string>
    <string name="registration">Registration</string>
    <string name="warning_login_or_pass">Invalid username or password</string>
    <string name="error_server">Error server</string>
    <string name="camera">Take a picture</string>
    <string name="gallery">Download from device</string>
    <string name="notification">%1$s %2$s</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="week_ago">Week ago</string>
</resources>