<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_main"
    app:startDestination="@id/feedFragment">

    <fragment
        android:id="@+id/feedFragment"
        android:name="ru.netology.nmedia.fragment.FeedFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_feed" >
        <action
            android:id="@+id/to_newPostOrEditPostFragment"
            app:destination="@id/newPostFragment" />
        <action
            android:id="@+id/action_feedFragment_to_showPostFragment"
            app:destination="@id/showPostFragment" />
        <action
            android:id="@+id/action_feedFragment_to_showImageFragment"
            app:destination="@id/showImageFragment" />
        <action
            android:id="@+id/action_feedFragment_to_authenticationFragment"
            app:destination="@id/authenticationFragment" />
        <action
            android:id="@+id/action_feedFragment_to_registrationFragment"
            app:destination="@id/registrationFragment" />
    </fragment>
    <fragment
        android:id="@+id/newPostFragment"
        android:name="ru.netology.nmedia.fragment.NewPostOrEditPostFragment"
        android:label="@string/new_or_edit_post"
        tools:layout="@layout/fragment_new_post_or_edit_post" >
        <action
            android:id="@+id/action_newPostFragment_to_feedFragment"
            app:destination="@id/feedFragment" />
    </fragment>
    <fragment
        android:id="@+id/showPostFragment"
        android:name="ru.netology.nmedia.fragment.ShowPostFragment"
        android:label="@string/show_post"
        tools:layout="@layout/card_post">
        <action
            android:id="@+id/action_showPostFragment_to_feedFragment"
            app:destination="@id/feedFragment" />
        <action
            android:id="@+id/action_showPostFragment_to_newPostFragment"
            app:destination="@id/newPostFragment" />
        <action
            android:id="@+id/action_showPostFragment_to_showImageFragment"
            app:destination="@id/showImageFragment" />
        <action
            android:id="@+id/action_showPostFragment_to_authenticationFragment"
            app:destination="@id/authenticationFragment" />
    </fragment>
    <fragment
        android:id="@+id/showImageFragment"
        android:name="ru.netology.nmedia.fragment.ShowImageFragment"
        android:label="@string/show_image"
        tools:layout="@layout/fragment_show_image" />
    <fragment
        android:id="@+id/authenticationFragment"
        android:name="ru.netology.nmedia.fragment.AuthenticationFragment"
        android:label="@string/authentication"
        tools:layout="@layout/fragment_authentication" />
    <fragment
        android:id="@+id/registrationFragment"
        android:name="ru.netology.nmedia.fragment.RegistrationFragment"
        android:label="@string/registration"
        tools:layout="@layout/fragment_registration" />
</navigation>