<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.NewPostOrEditPostFragment">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:inputType="textMultiLine"
                android:padding="@dimen/offset" />

            <FrameLayout
                android:id="@+id/photoContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/photo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/description_photo" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/removePhoto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|bottom"
                    android:text="@string/remove" />

            </FrameLayout>

        </LinearLayout>

    </ScrollView>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/offset"
        android:layout_marginEnd="@dimen/offset"
        android:background="@color/divider_color"
        app:layout_constraintBottom_toTopOf="@id/buttonPanel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/buttonPanel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/pickPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/description_select_photo"
            android:padding="@dimen/offset_photo"
            android:src="@drawable/ic_photo_24" />

        <ImageView
            android:id="@+id/takePhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/description_take_photo"
            android:padding="@dimen/offset_photo"
            android:src="@drawable/ic_camera_24" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>